--- a/KarstShell/README
+++ b/KarstShell/README
@@ -16,6 +16,6 @@ There are two ways in which the project can be run.
 
 2. Use mvn package to package the project to a war file and copy the file to the webapps folder of your tomcat installation. Reboot the server and navigate 
    to the localhost URL.
-
+3. The job file is actually the executable file that needs to be executed on Karst. It can also be a C program file which can be submitted. But in the latter case, Compilation Required should be set to Yes.
 
 The index page provides navigation to the forms specific to each of the APIs which can be used to invoke the APIs.
